Refactoring Heriseon Code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
 
-    <div class="hero"></div>
+    <div class="hero" alt="People working together in a group"></div>
 
     <div class="content">
 
